syntax = "proto3";
  
package caber.macaron;

import "data/proto/activity/activity_timestamp.proto";

// Represents timeline of activities of a financial org.
message EarningActivity {
  // A global unique ID for this finance entity.
	int32 fin_entity_id = 1;

	// Timestamp when activity happens.
	ActivityTimestamp activity_timestamp = 2;
}
